--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,8 @@
 name: Sample-code
 on: workflow_dispatch
 jobs:
+ first-job:
    runs-on: ubuntu-latest
    steps:
-     -name: running basic commands
-      run: echo "one step ahead"
+     - name: running basic commands
+       run: echo "one step ahead"
